# timepoint-tdf

./: .gitignore  CLAUDE.md  CODEOWNERS  LICENSE  README.md  docs.json  pyproject.toml
.github/workflows/: publish.yml
tests/: test_tdf.py
timepoint_tdf/: __init__.py  io.py  record.py  transforms.py
