[project]
name = "timepoint-tdf"
version = "1.0.0"
description = "Timepoint Data Format — unified data interchange for the Timepoint suite"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Sean McDonald", email = "realityinspector@gmail.com"}]
dependencies = ["pydantic>=2.0"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["timepoint_tdf*"]
